--- a/hipo3.html
+++ b/hipo3.html
@@ -44,17 +44,22 @@
     /* Carousel dots explicit style */
     #testimonial-dots button{ width:10px; height:10px; border-radius:9999px; background:rgba(255,255,255,.4); display:inline-block; }
     #testimonial-dots button.active{ background:#FFFFFF; }
+      /* Marquee (top notice) */
+    .marquee{position:relative; overflow:hidden; height:1.75rem; display:block;}
+    .marquee__text{display:inline-block; white-space:nowrap; padding-right:3rem;}
+    /* Carousel dots explicit style */
+    #testimonial-dots button{ width:10px; height:10px; border-radius:9999px; background:rgba(255,255,255,.4); display:inline-block; }
+    #testimonial-dots button.active{ background:#FFFFFF; }
   </style>
 </head>
 <body class="bg-white text-gray-800">
   <div class="bg-amber-50 text-amber-900 text-xs sm:text-sm">
     <div class="container mx-auto px-4 sm:px-6 py-2">
-      <div class="marquee">
-        <div class="marquee__inner">
-          I work with up to 3 clients in parallel. <span class="font-semibold">1 slot currently open.</span>
-          &nbsp;&nbsp;•&nbsp;&nbsp; I work with up to 3 clients in parallel. <span class="font-semibold">1 slot currently open.</span>
-        </div>
+      <div id="availability-marquee" class="marquee">
+        <span class="marquee__text">I work with up to 3 clients in parallel. <span class="font-semibold">1 slot currently open.</span></span>
       </div>
+    </div>
+  </div>
     </div>
   </div>
 
@@ -388,6 +393,40 @@
       }
 
       render(await detectCurrency());
+    })();
+      // Seamless marquee without duplicated visible text
+    (function(){
+      const root = document.getElementById('availability-marquee');
+      if(!root) return;
+      const first = root.querySelector('.marquee__text');
+      if(!first) return;
+      const second = first.cloneNode(true);
+      root.appendChild(second);
+
+      let w = first.offsetWidth;
+      const spacing = 48; // px
+      let x1 = 0;
+      let x2 = w + spacing;
+      const speed = matchMedia('(max-width:640px)').matches ? 40 : 60; // px/sec
+
+      [first, second].forEach(el=>{ el.style.position='absolute'; el.style.left='0'; el.style.willChange='transform'; });
+
+      function recalc(){ w = first.offsetWidth; x1 = 0; x2 = w + spacing; }
+      window.addEventListener('resize', recalc);
+
+      let last = null;
+      function tick(ts){
+        if(last == null) last = ts;
+        const dt = (ts - last)/1000; last = ts;
+        const dx = speed * dt;
+        x1 -= dx; x2 -= dx;
+        if(x1 <= -w - spacing) x1 = x2 + w + spacing;
+        if(x2 <= -w - spacing) x2 = x1 + w + spacing;
+        first.style.transform = `translateX(${x1}px)`;
+        second.style.transform = `translateX(${x2}px)`;
+        requestAnimationFrame(tick);
+      }
+      requestAnimationFrame(tick);
     })();
   </script>
 </body>
